--- a/content/novedades/database_scripts.Rmd
+++ b/content/novedades/database_scripts.Rmd
@@ -2,7 +2,9 @@
 title: "Scripts for the Data Paper"
 author: "Florencia Grattarola"
 date: "12 June 2019"
-output: html_document
+output:
+  md_document:
+    variant: markdown_github
 ---
 
 ```{r setup, include=FALSE}
